[package]
name = "hb2"
build = "build.rs"
version = "0.7.2-dev"
authors = ["G Queiroz <gabrieljvnq@gmail.com>"]
edition = "2021"
description = "A simple tool for backing up documents based on their hashes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
tempfile = "3.26.0"
regex = "1.10.6"
hex = "0.4"
url = "2.5"
clap = { version = "4.5.60", features = ["derive"] }
chrono = "0.4.44"
openssl = "0.10.64"
rusqlite = { version = "0.29", features = ["bundled", "chrono"] }
env_logger = "0.8"
snailquote = "0.3"
simple-error = "0.2"
e2p-fileflags = { version = "0.1.0", git = "https://github.com/michaellass/e2p-fileflags.git", rev = "23960d9f6f639d0a81127e704c407b9f9d39d54d" }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
uuid = { version = "1.22.0", features = ["v4"] }
# pretty_env_logger = "0.4"

[build-dependencies]
anyhow = "1.0"
vergen = { version = "7.3", default-features = false, features = ["build", "rustc", "git"] }

[profile.release]
debug = true
